--- a/src/App.css
+++ b/src/App.css
@@ -20,11 +20,13 @@
     width: 1000px;
     height: 500px;
     padding: 25px 28px;
+    transition: 0.8s;
     background: url("https://img.freepik.com/free-photo/hand-painted-watercolor-background-with-sky-clouds-shape_24972-1095.jpg?size=626&ext=jpg&ga=GA1.2.1014303459.1641081600");
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
+    box-shadow:16px -12px 21px 5px rgb(0 0 0 / 19%) ; 
     /* transform: matrix3d(1, 0, -0.5, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); */
     
 }
@@ -50,7 +52,7 @@
     transform: rotate3d(60, 4, 1, -34deg);
     width: inherit;
     height: inherit;
-    box-shadow:0px -62px 15px -3px rgb(0 0 0 / 19%);
+    box-shadow:0px -26px 19px -7px rgb(0 0 0 / 19%);
 }
 .next,.prev{
     width: 40px;
@@ -90,6 +92,7 @@
         height: 43vh;
     }   
     .next,.prev{
+        width: 30px;
         height: 60vh;
     }
 }
