--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
     height: 500px;
     padding: 25px 28px;
     transition: 0.8s;
-    background: url("https://img.freepik.com/free-photo/hand-painted-watercolor-background-with-sky-clouds-shape_24972-1095.jpg?size=626&ext=jpg&ga=GA1.2.1014303459.1641081600");
+    background: url("https://data.whicdn.com/images/265060879/original.gif");
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
