--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
     height: 500px;
     padding: 25px 28px;
     transition: 0.8s;
-    background: url("https://data.whicdn.com/images/265060879/original.gif");
+    background: url("https://yogya.xyz/wp-content/uploads/2021/06/26d0df9075d59fdc7a3a1da2a99ab358.gif");
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
