--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@
     }
     
     audio::-webkit-media-controls-panel {
-        background: url("https://freerangestock.com/sample/140290/romantic-couple-watching-the-stars--love-on-the-milky-way.jpg");
+        background: url("https://freerangestock.com/sample/140290/romantic-couple-watching-the-stars--love-on-the-milky-way.jpg") !important;
         background-position: center;
         
     }
