--- a/src/App.css
+++ b/src/App.css
@@ -10,12 +10,26 @@
   align-items: center;
 }
 .ButtonONOFF{
+    bottom:70px;
     margin-top: 15px;
     background: transparent;
     border-style: none;
     color: white !important;
     cursor: pointer;
     font-size: 20px;
+}
+.first{
+    width: 1056px;
+    height: 584px;
+    display: flex;
+    justify-content: center;
+    background: url("https://freerangestock.com/sample/140290/romantic-couple-watching-the-stars--love-on-the-milky-way.jpg");
+    background-size: cover;
+    background-position: center;
+    position: absolute;
+    top:0;
+    left: 0;
+    transition: 3s;
 }
 .screen{
     width: 1000px;
@@ -36,7 +50,7 @@
     margin: 0;
     margin-top: -12px;
     padding: 0;
-    transition:all 800ms linear;
+    transition:all 3600ms linear;
     display: flex;
     list-style: none;
 }
@@ -71,7 +85,7 @@
     left: 0;
 }
 .next:hover,.prev:hover{
-    background: rgba(87, 107, 80, 0.308);
+    background: rgba(115, 224, 75, 0.308);
     cursor: pointer;
     color: white;
 }
@@ -81,6 +95,14 @@
     .App{
         /* background-size: contain; */
         background-position-x:center;
+    }
+    .ButtonONOFF{
+        position:absolute;
+
+    }
+    .first{
+        width: 328px;
+        height: 452px;
     }
     .screen{
         width:272px;
@@ -98,7 +120,7 @@
     }   
     .next,.prev{
         width: 30px;
-        height: 60vh;
+        height: 450px;
     }
     
     audio::-webkit-media-controls-panel {
